# rust-scp

./: .env  Cargo.toml  README.md  sqlx-data.json
migrations/: 20210512012506_init.sql  20210517124322_init.down.sql  20210517124322_init.up.sql
src/: helpers.rs  main.rs  router.rs
src/controllers/: logs.rs  mod.rs  rabbit.rs  test.rs  test_async.rs
src/controllers/admin/: logs.rs
src/helpers/: log.rs  response.rs
src/middleware/: request_id.rs
src/model/: log.rs  mod.rs  payment.rs
src/services/: mod.rs  record_register.rs
src/services/logs/: db_log_object.rs  handler.rs  mod.rs  simple_logger.rs
src/services/mapper/: codes.rs  from_beeline.rs  inner_result.rs  mod.rs  outer_result.rs  to_merchant.rs
src/views/admin/: logs.hbs
views/: logs.html
views/admin/: logs.html
web_controller/: Cargo.toml
web_controller/src/: lib.rs
web_controller/web_controller_derive/: Cargo.toml
web_controller/web_controller_derive/src/: lib.rs
