cargo-features = ["edition2021"]

[package]
name = "rust-scp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
log = { version = "0.4.14", features = ["std"] }
sqlx = { version = "0.5.1", features = ["postgres", "runtime-tokio-rustls", "chrono", "offline"] }
tokio-postgres = "0.7.0"
handlebars = "4.3.0"
serde = "1.0.125"
serde_json = "1.0.64"
dotenv = "0.15.0"
web_controller = { path = "web_controller" }
web_controller_derive = { path = "web_controller/web_controller_derive" }
strum = "0.21"
strum_macros = "0.21.1" #enum to string
amiquip = "0.4.0"
chrono = "0.4.19"
